--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "bundle": "webpack --entry ./src/simpleApp.js --output-filename ./dist/bundle.js"
+    "bundle": "webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.8",
     "ejs": "^2.5.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "raw-loader": "^0.5.1"
   },
   "devDependencies": {
     "webpack": "^1.13.3"
