--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular": "^1.5.8",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "markup-inline-loader": "^0.1.1",
     "raw-loader": "^0.5.1"
   },
   "devDependencies": {
